src/objects/Account_Campaign__c.object
<CustomObject>
    <description>Enables Accounts to be associated to campaigns.</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>CTIMGI: Looks up an Account record to associated with a campaign.</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Campaigns</relationshipLabel>
        <relationshipName>Account_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Campaign_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Global: Looks up a campaign to associate to the Account record.</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Account Campaigns</relationshipLabel>
        <relationshipName>Account_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DM_Identifier__c</fullName>
        <description>DM Identifier External  ID field</description>
        <externalId>true</externalId>
        <label>DM Identifier</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Account Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>AC{0000}</displayFormat>
        <label>Account Campaign Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>